--- a/stores/src/main/resources/templates/profile.html
+++ b/stores/src/main/resources/templates/profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Home | Doan Stores</title>
+    <title>Tài khoản | Doan Stores</title>
     <link href="/libs/users/css/bootstrap.min.css" rel="stylesheet">
     <link href="/libs/users/css/font-awesome.min.css" rel="stylesheet">
     <link href="/libs/users/css/prettyPhoto.css" rel="stylesheet">
